# arbor

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bunfig.toml  codecov.yml  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tasks.md  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: arbor-spec-design-b_2.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  cleanup.rs  config_cmd.rs  dsx.rs  github.rs  mod.rs  repo.rs
src/components/: AppBar.test.tsx  AppBar.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Sidebar.test.tsx  Sidebar.tsx  Toast.test.tsx  Toast.tsx
src/lib/: aiService.test.ts  aiService.ts  invoke.test.ts  invoke.ts  ruleEngine.test.ts  ruleEngine.ts
src/stores/: repoStore.ts  uiStore.ts
src/styles/: global.css  tokens.css
src/test/: coverage-manifest.test.ts  happydom.ts  matchers.d.ts  setup.ts
src/types/: index.ts
src/views/: AiAssistant.test.tsx  AiAssistant.tsx  Branches.tsx  Cleanup.test.tsx  Cleanup.tsx  Graph.tsx  Overview.test.tsx  Overview.tsx  PullRequests.test.tsx  PullRequests.tsx  Settings.test.tsx  Settings.tsx  Stash.test.tsx  Stash.tsx
