[package]
name = "arbor"
version = "0.1.0"
edition = "2021"

[lib]
name = "arbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri          = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.1"
serde          = { version = "1.0.228", features = ["derive"] }
serde_json     = "1.0.149"
toml           = "1.1.2"
git2           = "0.20.4"
tokio          = { version = "1.52.1", features = ["full"] }
reqwest        = { version = "0.13.3", features = ["json"] }
keyring        = "4.0.0"
dirs           = "6.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys    = { version = "0.61.2", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }
